dotnet_backend/api/K8S/api-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: apinpservice-srv
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - name: api
      protocol: TCP
      port: 80
      targetPort: 80
